mod: commitmessage, githubstat 리스트로 수정